--- a/tutorials/l_master.ipynb
+++ b/tutorials/l_master.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b5b2e23a",
+   "id": "79519247",
    "metadata": {},
    "source": [
     "# Custom Time Evolution\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ac83585",
+   "id": "4a953da6",
    "metadata": {},
    "source": [
     "*Note*: Please consult the tutorial on potentials first."
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2685551b",
+   "id": "b5354a13",
    "metadata": {},
    "source": [
     "*Note*: While a bit more complicated, this tutorial can help you make your simulations not only more versatile, but also increase their efficiency."
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a203332f",
+   "id": "d84c28f8",
    "metadata": {},
    "source": [
     "## Hamiltonian"
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b799ae2d",
+   "id": "7c868161",
    "metadata": {},
    "source": [
     "When calling the integration for the master equation, you can give an optional argument, `hamiltonian`. As already discussed, this argument represents a Hamiltonian as a dictionary of functions."
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0083159d",
+   "id": "328adfeb",
    "metadata": {},
    "source": [
     "Up to now, we  wanted to use custom potentials, so we  added them to the dictionary. Let's look more closely at what is going on by considering a flake under plane wave illumination."
@@ -53,13 +53,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "3d07e9b8",
+   "id": "e5a7a85d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-08-15T13:43:03.070747Z",
-     "iopub.status.busy": "2024-08-15T13:43:03.070551Z",
-     "iopub.status.idle": "2024-08-15T13:43:07.547967Z",
-     "shell.execute_reply": "2024-08-15T13:43:07.547306Z"
+     "iopub.execute_input": "2024-08-16T15:05:15.758352Z",
+     "iopub.status.busy": "2024-08-16T15:05:15.758156Z",
+     "iopub.status.idle": "2024-08-16T15:05:20.475781Z",
+     "shell.execute_reply": "2024-08-16T15:05:20.475147Z"
     }
    },
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b6f3e71c",
+   "id": "8ccb49c9",
    "metadata": {},
    "source": [
     "As discussed, the default Hamiltonian  has three terms:"
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d546b6f",
+   "id": "353b557c",
    "metadata": {},
    "source": [
     "1. a bare hamiltonian.\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d3b2ad6a",
+   "id": "9bfe394b",
    "metadata": {},
    "source": [
     "Each of these terms is represented by a function. Every function accepts the following three arguments:"
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "27dd20a7",
+   "id": "6a219d5b",
    "metadata": {},
    "source": [
     "1. time\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b766fcf",
+   "id": "7de63fef",
    "metadata": {},
    "source": [
     "Every function maps these arguments to a complex matrix. Before running a simulation, the functions in the dictionary get turned into a list `func_list`. "
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22141aac",
+   "id": "54c567ae",
    "metadata": {},
    "source": [
     "The matrix representation of the Hamiltonian is then given by applying and adding these functions, like so `H[time] = sum( f(times[time], density_matrix[time], args) for f in func_list )`."
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "deeb02f4",
+   "id": "8993c8af",
    "metadata": {},
    "source": [
     "## Argument Objects"
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "caa62849",
+   "id": "d7abaa94",
    "metadata": {},
    "source": [
     "The `args` object is a named tuple (like a struct in the C programming language) and we can inspect its contents by looking at its fields "
@@ -150,13 +150,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "dd156b30",
+   "id": "1c4b2288",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-08-15T13:43:07.550974Z",
-     "iopub.status.busy": "2024-08-15T13:43:07.550524Z",
-     "iopub.status.idle": "2024-08-15T13:43:09.572273Z",
-     "shell.execute_reply": "2024-08-15T13:43:09.571699Z"
+     "iopub.execute_input": "2024-08-16T15:05:20.478828Z",
+     "iopub.status.busy": "2024-08-16T15:05:20.478309Z",
+     "iopub.status.idle": "2024-08-16T15:05:22.603377Z",
+     "shell.execute_reply": "2024-08-16T15:05:22.602764Z"
     }
    },
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e0048f2",
+   "id": "6a43da7f",
    "metadata": {},
    "source": [
     "We can access individual entries"
@@ -184,13 +184,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "67a1fb50",
+   "id": "15a51c58",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-08-15T13:43:09.574938Z",
-     "iopub.status.busy": "2024-08-15T13:43:09.574544Z",
-     "iopub.status.idle": "2024-08-15T13:43:09.578426Z",
-     "shell.execute_reply": "2024-08-15T13:43:09.577808Z"
+     "iopub.execute_input": "2024-08-16T15:05:22.606006Z",
+     "iopub.status.busy": "2024-08-16T15:05:22.605614Z",
+     "iopub.status.idle": "2024-08-16T15:05:22.609423Z",
+     "shell.execute_reply": "2024-08-16T15:05:22.608624Z"
     }
    },
    "outputs": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0e8e310",
+   "id": "9a9b4373",
    "metadata": {},
    "source": [
     "The `args` object is a lower-level representation of the OrbitalList object: a collection of numbers and arrays that represent the structure."
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed6f9095",
+   "id": "4ec0f746",
    "metadata": {},
    "source": [
     "The evolution is determined by the Hamiltonian. It is given by an addition of functions. Each of these functions depends on time, the density matrix and the simulated structure. So, a single function representing a term in the Hamiltonian has the following signature `term: time, density_matrix, args -> matrix`."
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa787314",
+   "id": "0622fd09",
    "metadata": {},
    "source": [
     "## Computing Terms"
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b3de18f2",
+   "id": "88500046",
    "metadata": {},
    "source": [
     "Individual terms of the default Hamiltonian can be inspected and since these are functions, applied to arguments. First, consider the bare Hamiltonian"
@@ -241,13 +241,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "9fe54dc5",
+   "id": "b2ed1272",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-08-15T13:43:09.581034Z",
-     "iopub.status.busy": "2024-08-15T13:43:09.580565Z",
-     "iopub.status.idle": "2024-08-15T13:43:09.627365Z",
-     "shell.execute_reply": "2024-08-15T13:43:09.626723Z"
+     "iopub.execute_input": "2024-08-16T15:05:22.611866Z",
+     "iopub.status.busy": "2024-08-16T15:05:22.611512Z",
+     "iopub.status.idle": "2024-08-16T15:05:22.658550Z",
+     "shell.execute_reply": "2024-08-16T15:05:22.657916Z"
     }
    },
    "outputs": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b5faf603",
+   "id": "0df70f74",
    "metadata": {},
    "source": [
     "The function returns the bare Hamiltonian, independent of the time and density matrix. Let's compute the Coulomb potential at the initial time"
@@ -280,13 +280,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "83ba22ca",
+   "id": "c075c898",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-08-15T13:43:09.630141Z",
-     "iopub.status.busy": "2024-08-15T13:43:09.629778Z",
-     "iopub.status.idle": "2024-08-15T13:43:09.701235Z",
-     "shell.execute_reply": "2024-08-15T13:43:09.700589Z"
+     "iopub.execute_input": "2024-08-16T15:05:22.661228Z",
+     "iopub.status.busy": "2024-08-16T15:05:22.660835Z",
+     "iopub.status.idle": "2024-08-16T15:05:22.735515Z",
+     "shell.execute_reply": "2024-08-16T15:05:22.734877Z"
     }
    },
    "outputs": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c4239ca2",
+   "id": "41f62a8a",
    "metadata": {},
    "source": [
     "At the start of the simulation, there is no induced Coulomb potential (all entries in the matrix are zero), because the system is in its ground state."
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "505763bb",
+   "id": "c39edbd1",
    "metadata": {},
    "source": [
     "Last, there is the external potential. Since no transition dipole moments are considered, it will be entirely diagonal in site basis"
@@ -326,13 +326,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "0c5d03a5",
+   "id": "df7c596e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-08-15T13:43:09.703810Z",
-     "iopub.status.busy": "2024-08-15T13:43:09.703420Z",
-     "iopub.status.idle": "2024-08-15T13:43:09.735061Z",
-     "shell.execute_reply": "2024-08-15T13:43:09.734485Z"
+     "iopub.execute_input": "2024-08-16T15:05:22.738192Z",
+     "iopub.status.busy": "2024-08-16T15:05:22.737836Z",
+     "iopub.status.idle": "2024-08-16T15:05:22.770729Z",
+     "shell.execute_reply": "2024-08-16T15:05:22.770096Z"
     }
    },
    "outputs": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc062ba0",
+   "id": "f0bed2a2",
    "metadata": {},
    "source": [
     "## Modelling Terms"
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6182e1d",
+   "id": "cb809ac7",
    "metadata": {},
    "source": [
     "To include arbitrary terms in the time evolution, we define a function that"
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11c5d5c4",
+   "id": "81f2cfb4",
    "metadata": {},
    "source": [
     "1. Accepts `time, density_matrix, args`\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b5484903",
+   "id": "a3afc964",
    "metadata": {},
    "source": [
     "Then, we insert it in the dictionary, potentially overwriting a default key."
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d4d15fa6",
+   "id": "6ab7083b",
    "metadata": {},
    "source": [
     "Let's illustrate this at the example of a custom scalar potential. We want to replace the dipole-gauge coupling $\\vec{E} \\vec{P}$ with a scalar potential representing a plane-wave pulse. Let's define this potential first"
@@ -398,13 +398,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "265b8bff",
+   "id": "c1e3f59d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-08-15T13:43:09.737799Z",
-     "iopub.status.busy": "2024-08-15T13:43:09.737314Z",
-     "iopub.status.idle": "2024-08-15T13:43:09.741740Z",
-     "shell.execute_reply": "2024-08-15T13:43:09.741184Z"
+     "iopub.execute_input": "2024-08-16T15:05:22.773167Z",
+     "iopub.status.busy": "2024-08-16T15:05:22.772902Z",
+     "iopub.status.idle": "2024-08-16T15:05:22.777303Z",
+     "shell.execute_reply": "2024-08-16T15:05:22.776683Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ca1d164",
+   "id": "36e5d493",
    "metadata": {},
    "source": [
     "Now, we replace the default potential with our custom term,  as we did before in the case of the pulsed dipole."
@@ -432,13 +432,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "a3eb242a",
+   "id": "3c9e9534",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-08-15T13:43:09.744351Z",
-     "iopub.status.busy": "2024-08-15T13:43:09.743868Z",
-     "iopub.status.idle": "2024-08-15T13:43:09.747323Z",
-     "shell.execute_reply": "2024-08-15T13:43:09.746709Z"
+     "iopub.execute_input": "2024-08-16T15:05:22.779468Z",
+     "iopub.status.busy": "2024-08-16T15:05:22.779141Z",
+     "iopub.status.idle": "2024-08-16T15:05:22.782196Z",
+     "shell.execute_reply": "2024-08-16T15:05:22.781520Z"
     }
    },
    "outputs": [],
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "77bf5f9a",
+   "id": "a788367e",
    "metadata": {},
    "source": [
     "To run a time-domain simulation, we  pass the modified Hamiltonian dictionary directly, as demonstrated in the first section"
@@ -457,13 +457,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "2cfcec5a",
+   "id": "2c90a60c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-08-15T13:43:09.749869Z",
-     "iopub.status.busy": "2024-08-15T13:43:09.749391Z",
-     "iopub.status.idle": "2024-08-15T13:43:12.269812Z",
-     "shell.execute_reply": "2024-08-15T13:43:12.269091Z"
+     "iopub.execute_input": "2024-08-16T15:05:22.784718Z",
+     "iopub.status.busy": "2024-08-16T15:05:22.784199Z",
+     "iopub.status.idle": "2024-08-16T15:05:25.423143Z",
+     "shell.execute_reply": "2024-08-16T15:05:25.422500Z"
     }
    },
    "outputs": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe7e4a86",
+   "id": "641291b1",
    "metadata": {},
    "source": [
     "## Modelling Dissipators"
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "806119c5",
+   "id": "f4087334",
    "metadata": {},
    "source": [
     "Dissipators are modelled as functions with the same signature as terms in the Hamiltonian, i.e. to model a custom dissipator"
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d7124d64",
+   "id": "87e902be",
    "metadata": {},
    "source": [
     "1. Define a function `diss : time, density_matrix, args -> jax.Array`\n",
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d79ab3d",
+   "id": "9afe7c0c",
    "metadata": {},
    "source": [
     "You can also get defaults"
@@ -542,13 +542,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "13c35990",
+   "id": "0cfc6fa7",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-08-15T13:43:12.272529Z",
-     "iopub.status.busy": "2024-08-15T13:43:12.272124Z",
-     "iopub.status.idle": "2024-08-15T13:43:12.276011Z",
-     "shell.execute_reply": "2024-08-15T13:43:12.275383Z"
+     "iopub.execute_input": "2024-08-16T15:05:25.425967Z",
+     "iopub.status.busy": "2024-08-16T15:05:25.425576Z",
+     "iopub.status.idle": "2024-08-16T15:05:25.429789Z",
+     "shell.execute_reply": "2024-08-16T15:05:25.429177Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -558,7 +558,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f1881540900>}\n"
+      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f5dc8e84900>}\n"
      ]
     }
    ],
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e32cd26",
+   "id": "c9e87a88",
    "metadata": {},
    "source": [
     "NOTE: To pass the dissipator above to the `master_equation` method, you have to specify the relaxation rate again. "
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0cfc4163",
+   "id": "1e8844e7",
    "metadata": {},
    "source": [
     "## Postprocesses"
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c4af8ae1",
+   "id": "528b68f0",
    "metadata": {},
    "source": [
     "You can define custom postprocesses. These are functions with the signature `postprocess : density_matrix_batch, args -> array`. The `density_matrix_batch` is an array of shape `TxNxN`, where `T` encodes time."
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94a2b48d",
+   "id": "5bfe1d51",
    "metadata": {},
    "source": [
     "For example, if you are only interested in the occupation of the 0-th state"
@@ -602,13 +602,13 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "5eea7aea",
+   "id": "59f9fbb0",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-08-15T13:43:12.278521Z",
-     "iopub.status.busy": "2024-08-15T13:43:12.278145Z",
-     "iopub.status.idle": "2024-08-15T13:43:12.281269Z",
-     "shell.execute_reply": "2024-08-15T13:43:12.280775Z"
+     "iopub.execute_input": "2024-08-16T15:05:25.432370Z",
+     "iopub.status.busy": "2024-08-16T15:05:25.431959Z",
+     "iopub.status.idle": "2024-08-16T15:05:25.435495Z",
+     "shell.execute_reply": "2024-08-16T15:05:25.434779Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -622,13 +622,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "0e69332a",
+   "id": "e1d3589f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-08-15T13:43:12.283553Z",
-     "iopub.status.busy": "2024-08-15T13:43:12.283214Z",
-     "iopub.status.idle": "2024-08-15T13:43:13.359728Z",
-     "shell.execute_reply": "2024-08-15T13:43:13.359125Z"
+     "iopub.execute_input": "2024-08-16T15:05:25.437966Z",
+     "iopub.status.busy": "2024-08-16T15:05:25.437572Z",
+     "iopub.status.idle": "2024-08-16T15:05:26.561720Z",
+     "shell.execute_reply": "2024-08-16T15:05:26.561063Z"
     }
    },
    "outputs": [
